<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_name"
        android:id="@+id/event_name"

    />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/position"
        android:id="@+id/event_position"
    />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/event_initial_date"
            android:onClick="setInitialDate"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:background="@color/White"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="14dp"

        />

        <Button
            android:id="@+id/event_initial_hour"
            android:onClick="setInitialHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/White"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="11dp"
        />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/event_final_date"
            android:onClick="setFinaleDate"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:background="@color/White"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="14dp"

            />

        <Button
            android:id="@+id/event_final_hour"
            android:onClick="setFinalHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/White"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="11dp"
            />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignBottom="@+id/spinner_transports"
            android:layout_marginStart="10dp"
            android:layout_alignParentTop="true"
            android:text="@string/transport"
            android:textColor="@color/Black" />


        <Spinner
            android:id="@+id/spinner_transports"
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="57dp"
            android:layout_toEndOf="@+id/textView"
            android:spinnerMode="dropdown" />



    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp">
        <Switch
            android:id="@+id/activate_notification"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:text="@string/activate_notification" />
        <Switch
            android:id="@+id/activate_position_notification"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="180sp"
            android:enabled="false"
            android:text="@string/location_based_notification" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp">
        <TextView
            android:id="@+id/notificationTextView"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_alignParentTop="true"
            android:text="@string/notification"
            android:textColor="@color/Black" />
        <EditText
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:id="@+id/notification_time"
            android:enabled="false"
            />
        <Spinner
            android:id="@+id/notification_type"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:spinnerMode="dropdown"
            android:layout_alignBottom="@+id/notificationTextView"
            android:layout_alignStart="@+id/notification_time"
            android:enabled="false"

            />

    </RelativeLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/save"
        android:onClick="saveEvent" />

</LinearLayout>